tests/snapshots/integration__timeline_dump_model__timeline__valid_chronology_baseline.puml.snap
---
source: tests/integration.rs
assertion_line: 1204
expression: json
---
{
  "caption": null,
  "chronology_events": [
    {
      "bracket": false,
      "color": null,
      "date_precision": "day",
      "end": null,
      "end_date_precision": null,
      "end_day": null,
      "start_day": 20583,
      "subject": "Phase 1",
      "when": "2026-05-10"
    },
    {
      "bracket": false,
      "color": null,
      "date_precision": "day",
      "end": null,
      "end_date_precision": null,
      "end_day": null,
      "start_day": 20605,
      "subject": "Phase 2",
      "when": "2026-06-01"
    }
  ],
  "closed_ranges": [],
  "closed_weekdays": [],
  "constraints": [],
  "footer": null,
  "header": null,
  "kind": "Chronology",
  "legend": null,
  "milestones": [],
  "named_dates": [],
  "open_ranges": [],
  "print_end": null,
  "print_end_day": null,
  "print_start": null,
  "print_start_day": null,
  "project_start": null,
  "project_start_day": null,
  "separators": [],
  "tasks": [],
  "title": null,
  "warnings": []
}
