tests/snapshots/integration__timeline_dump_model__timeline__valid_gantt_baseline.puml.snap
---
source: tests/integration.rs
assertion_line: 1204
expression: json
---
{
  "kind": "Gantt",
  "tasks": [
    {
      "name": "Design",
      "start_day": 20574,
      "workload_days": 14,
      "duration_days": 14,
      "resources": [],
      "resource_allocations": []
    },
    {
      "name": "Build",
      "start_day": 20588,
      "workload_days": 14,
      "duration_days": 14,
      "resources": [],
      "resource_allocations": []
    }
  ],
  "milestones": [
    {
      "name": "Kickoff",
      "happens_on": "2026-05-01"
    }
  ],
  "separators": [],
  "constraints": [
    {
      "subject": "Kickoff",
      "kind": "happens",
      "target": "2026-05-01"
    },
    {
      "subject": "Build",
      "kind": "requires",
      "target": "[Design]"
    }
  ],
  "closed_weekdays": [],
  "closed_ranges": [],
  "open_ranges": [],
  "named_dates": [],
  "chronology_events": [],
  "project_start": null,
  "project_start_day": null,
  "print_start": null,
  "print_end": null,
  "print_start_day": null,
  "print_end_day": null,
  "title": null,
  "header": null,
  "footer": null,
  "caption": null,
  "legend": null,
  "warnings": []
}
